--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,7 @@ If you wait to finish one task before you figure out what next, then you may be 
 
     <div class="secdiv">
     	<p class="two"> <a>&copy;2022.NaTLimited. Owned and Powered by Ojo Group of Companies.Nigeria</a></p>
-    	<p><img src="../web/btransfer.jpg"><img src="../web/mastercard.png"><img src="../web/visa.png"> </p>
+    	<p><img src="btransfer.jpg"><img src="mastercard.png"><img src="visa.png"> </p>
     </div>
 
 </body>
