--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@
 
     <div class="secdiv">
     	<p class="two"> <a>&copy;2022.NaTLimited. Owned and Powered by Ojo Group of Companies.Nigeria</a></p>
-    	<p><img src="../web/btransfer.jpg"><img src="../web/mastercard.png"><img src="../web/visa.png"> </p>
+    	<p><img src="btransfer.jpg"><img src="mastercard.png"><img src="visa.png"> </p>
     </div>
 
 </body>
